@@ -1,15 +1,18 @@
 package com.mycodefu.mongodb;
 
+import com.mycodefu.lmstudio.LMStudioEmbedding;
 import com.mycodefu.model.Image;
 import com.mycodefu.model.ImageSearchResult;
+import com.mycodefu.model.SearchType;
 import com.mycodefu.mongodb.atlas.MongoConnectionTracing;
+import com.mycodefu.mongodb.search.SearchFilters;
+import com.mycodefu.mongodb.search.SearchRequest;
 import org.junit.Test;
 
 import java.util.Date;
 import java.util.List;
 
 import static org.junit.Assert.*;
-
 
 public class ImageDataAccessTest extends AtlasDataTest {
 
@@ -21,6 +24,8 @@ public class ImageDataAccessTest extends AtlasDataTest {
 
         assertEquals(79047, exampleImage._id());
         assertEquals("Snow surrounds a standing bear statue on a sidewalk.", exampleImage.caption());
+        assertEquals(List.of(1.0, 0.2, 0.0, 0.0), exampleImage.captionEmbedding());
+        assertEquals("sample-test-vector-v1", exampleImage.captionEmbeddingModel());
         assertEquals("http://images.cocodataset.org/train2017/000000079047.jpg", exampleImage.url());
         assertEquals(640, exampleImage.height());
         assertEquals(480, exampleImage.width());
@@ -41,24 +46,25 @@ public class ImageDataAccessTest extends AtlasDataTest {
         assertNull(exampleImage.kitchen());
         assertNull(exampleImage.sports());
         assertNull(exampleImage.vehicle());
-
     }
 
     @Test
     public void search_bear() {
         ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
-        ImageSearchResult searchResult = imageDataAccess.search("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null);
+        ImageSearchResult searchResult = imageDataAccess.search(request("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null));
         assertNotNull(searchResult);
         assertEquals(1, searchResult.docs().size());
-        Image exampleImage = searchResult.docs().get(0);
+        Image exampleImage = searchResult.docs().getFirst();
         assertEquals(79047, exampleImage._id());
         assertEquals("Snow surrounds a standing bear statue on a sidewalk.", exampleImage.caption());
+        assertNull(exampleImage.captionEmbedding());
+        assertNull(exampleImage.captionEmbeddingModel());
         assertEquals("http://images.cocodataset.org/train2017/000000079047.jpg", exampleImage.url());
         assertEquals(640, exampleImage.height());
         assertEquals(480, exampleImage.width());
         assertEquals(new Date(1384775627000L), exampleImage.dateCaptured());
-        assertEquals("Attribution-NonCommercial-ShareAlike License", exampleImage.licenseName());
-        assertEquals("http://creativecommons.org/licenses/by-nc-sa/2.0/", exampleImage.licenseUrl());
+        assertNull(exampleImage.licenseName());
+        assertNull(exampleImage.licenseUrl());
         assertFalse(exampleImage.hasPerson());
         assertEquals(1, exampleImage.animal().size());
         assertEquals("bear", exampleImage.animal().getFirst());
@@ -78,7 +84,7 @@ public class ImageDataAccessTest extends AtlasDataTest {
     @Test
     public void search_bird() {
         ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
-        ImageSearchResult searchResult = imageDataAccess.search(
+        ImageSearchResult searchResult = imageDataAccess.search(request(
                 "bread basket", 0,
                 true,
                 List.of("bird"),
@@ -87,32 +93,29 @@ public class ImageDataAccessTest extends AtlasDataTest {
                 null,
                 List.of("cup"),
                 null, null, null
-        );
+        ));
         assertNotNull(searchResult);
         assertEquals(1, searchResult.docs().size());
-        Image exampleImage = searchResult.docs().get(0);
+        Image exampleImage = searchResult.docs().getFirst();
         assertEquals(527040, exampleImage._id());
         assertEquals("Three birds sitting on a bread basket near a newspaper.", exampleImage.caption());
+        assertNull(exampleImage.captionEmbedding());
+        assertNull(exampleImage.captionEmbeddingModel());
         assertEquals("http://images.cocodataset.org/train2017/000000527040.jpg", exampleImage.url());
         assertEquals(640, exampleImage.height());
         assertEquals(480, exampleImage.width());
         assertEquals(new Date(1384546777000L), exampleImage.dateCaptured());
-        assertEquals("Attribution-NonCommercial License", exampleImage.licenseName());
-        assertEquals("http://creativecommons.org/licenses/by-nc/2.0/", exampleImage.licenseUrl());
-
+        assertNull(exampleImage.licenseName());
+        assertNull(exampleImage.licenseUrl());
         assertTrue(exampleImage.hasPerson());
-
         assertEquals(1, exampleImage.animal().size());
         assertEquals("bird", exampleImage.animal().getFirst());
-
         assertEquals(2, exampleImage.furniture().size());
         assertEquals("chair", exampleImage.furniture().getFirst());
         assertEquals("dining table", exampleImage.furniture().getLast());
-
         assertEquals(2, exampleImage.kitchen().size());
         assertEquals("cup", exampleImage.kitchen().getFirst());
         assertEquals("bowl", exampleImage.kitchen().getLast());
-
         assertNull(exampleImage.accessory());
         assertNull(exampleImage.appliance());
         assertNull(exampleImage.electronic());
@@ -123,10 +126,59 @@ public class ImageDataAccessTest extends AtlasDataTest {
     }
 
     @Test
+    public void search_include_license_fetches_license_fields_via_single_search_query() {
+        ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+        ImageSearchResult searchResult = imageDataAccess.search(request(
+                "statue",
+                SearchType.Text,
+                0,
+                null,
+                List.of("bear"),
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                true
+        ));
+
+        assertNotNull(searchResult);
+        assertEquals(1, searchResult.docs().size());
+        Image exampleImage = searchResult.docs().getFirst();
+        assertEquals(79047, exampleImage._id());
+        assertEquals("Attribution-NonCommercial-ShareAlike License", exampleImage.licenseName());
+        assertEquals("http://creativecommons.org/licenses/by-nc-sa/2.0/", exampleImage.licenseUrl());
+    }
+
+    @Test
     public void search_cat_pages() {
         ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
-        ImageSearchResult searchResult = imageDataAccess.search(
-                "cat",
+        ImageSearchResult searchResult = imageDataAccess.search(request("cat", 0, null, null, null, null, null, null, null, null, null, null, null));
+        assertNotNull(searchResult);
+        assertEquals(10, searchResult.docs().size());
+        assertTrue(searchResult.meta().getFirst().hasMore());
+
+        ImageSearchResult searchResultPage2 = imageDataAccess.search(request("cat", 1, null, null, null, null, null, null, null, null, null, null, null));
+        assertNotNull(searchResultPage2);
+        assertEquals(3, searchResultPage2.docs().size());
+        assertFalse(searchResultPage2.meta().getFirst().hasMore());
+
+        ImageSearchResult searchResultPage3 = imageDataAccess.search(request("cat", 2, null, null, null, null, null, null, null, null, null, null, null));
+        assertNotNull(searchResultPage3);
+        assertEquals(0, searchResultPage3.docs().size());
+        assertFalse(searchResultPage3.meta().getFirst().hasMore());
+    }
+
+    @Test
+    public void empty_text_browses_all_documents() {
+        ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+        ImageSearchResult searchResult = imageDataAccess.search(request(
+                null,
+                SearchType.Combined,
                 0,
                 null,
                 null,
@@ -138,48 +190,42 @@ public class ImageDataAccessTest extends AtlasDataTest {
                 null,
                 null,
                 null,
-                null
-        );
+                null,
+                false
+        ));
+
         assertNotNull(searchResult);
-        assertEquals(5, searchResult.docs().size());
+        assertEquals(10, searchResult.docs().size());
+        assertTrue(searchResult.meta().getFirst().hasMore());
+    }
 
-        assertEquals(13, searchResult.meta().getFirst().count().total());
+    @Test
+    public void category_only_search_without_text_returns_filtered_documents() {
+        ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+        ImageSearchResult searchResult = imageDataAccess.search(request(
+                null,
+                SearchType.Combined,
+                0,
+                null,
+                List.of("bear"),
+                null,
+                null,
+                null,
+                null,
+                null,
+                null,
+                List.of("bench"),
+                null,
+                null,
+                false
+        ));
 
-        ImageSearchResult searchResultPage2 = imageDataAccess.search(
-                "cat",
-                1,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null
-        );
-        assertNotNull(searchResultPage2);
-        assertEquals(5, searchResultPage2.docs().size());
-
-        ImageSearchResult searchResultPage3 = imageDataAccess.search(
-                "cat",
-                2,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null,
-                null
-        );
-        assertNotNull(searchResultPage3);
-        assertEquals(3, searchResultPage3.docs().size());
+        assertNotNull(searchResult);
+        assertFalse(searchResult.docs().isEmpty());
+        assertFalse(searchResult.meta().getFirst().hasMore());
+        assertTrue(searchResult.docs().stream().allMatch(image ->
+                image.animal() != null && image.animal().contains("bear")
+                        && image.outdoor() != null && image.outdoor().contains("bench")));
     }
 
     @Test
@@ -187,7 +233,7 @@ public class ImageDataAccessTest extends AtlasDataTest {
         System.setProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY, "true");
         try {
             ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
-            ImageSearchResult searchResult = imageDataAccess.search("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null);
+            ImageSearchResult searchResult = imageDataAccess.search(request("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null));
 
             assertNotNull(searchResult);
             assertNotNull(searchResult.stats());
@@ -206,12 +252,219 @@ public class ImageDataAccessTest extends AtlasDataTest {
     }
 
     @Test
+    public void vector_search_returns_semantic_match() {
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(1.0, 0.2, 0.0, 0.0), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "icy sculpture on a footpath",
+                    SearchType.Vector,
+                    0,
+                    null,
+                    List.of("bear"),
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    List.of("bench"),
+                    null,
+                    null,
+                    false
+            ));
+
+            assertNotNull(searchResult);
+            assertFalse(searchResult.docs().isEmpty());
+            assertEquals(79047, searchResult.docs().getFirst()._id());
+            assertNull(searchResult.docs().getFirst().captionEmbedding());
+            assertNull(searchResult.docs().getFirst().captionEmbeddingModel());
+            assertNull(searchResult.docs().getFirst().licenseName());
+            assertNull(searchResult.docs().getFirst().licenseUrl());
+            assertFalse(searchResult.meta().getFirst().hasMore());
+            assertNull(searchResult.meta().getFirst().facet());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+        }
+    }
+
+    @Test
+    public void vector_search_include_license_fetches_license_fields_via_single_search_query() {
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(1.0, 0.2, 0.0, 0.0), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "icy sculpture on a footpath",
+                    SearchType.Vector,
+                    0,
+                    null,
+                    List.of("bear"),
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    List.of("bench"),
+                    null,
+                    null,
+                    true
+            ));
+
+            assertNotNull(searchResult);
+            assertFalse(searchResult.docs().isEmpty());
+            assertEquals("Attribution-NonCommercial-ShareAlike License", searchResult.docs().getFirst().licenseName());
+            assertEquals("http://creativecommons.org/licenses/by-nc-sa/2.0/", searchResult.docs().getFirst().licenseUrl());
+            assertNull(searchResult.meta().getFirst().facet());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+        }
+    }
+
+    @Test
+    public void vector_search_executes_single_aggregate_command() {
+        System.setProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY, "true");
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(1.0, 0.2, 0.0, 0.0), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "icy sculpture on a footpath",
+                    SearchType.Vector,
+                    0,
+                    null,
+                    List.of("bear"),
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    List.of("bench"),
+                    null,
+                    null,
+                    false
+            ));
+
+            assertNotNull(searchResult);
+            assertNotNull(searchResult.stats());
+            assertEquals(1, searchResult.stats().operations().stream()
+                    .filter(operation -> "aggregate".equals(operation.commandName()))
+                    .count());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+            System.clearProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY);
+        }
+    }
+
+    @Test
+    public void vector_search_reports_has_more_for_broad_result_set() {
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(0.3, 0.3, 0.3, 0.3), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "cow",
+                    SearchType.Vector,
+                    0,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    null,
+                    false
+            ));
+
+            assertNotNull(searchResult);
+            assertTrue(searchResult.meta().getFirst().hasMore());
+            assertNull(searchResult.meta().getFirst().facet());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+        }
+    }
+
+    @Test
+    public void combined_search_combines_text_and_vector_results() {
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(0.0, 1.0, 0.15, 0.0), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "newspaper",
+                    SearchType.Combined,
+                    0,
+                    true,
+                    List.of("bird"),
+                    null,
+                    null,
+                    null,
+                    List.of("chair", "dining table"),
+                    null,
+                    List.of("cup"),
+                    null,
+                    null,
+                    null,
+                    false
+            ));
+
+            assertNotNull(searchResult);
+            assertFalse(searchResult.docs().isEmpty());
+            assertEquals(527040, searchResult.docs().getFirst()._id());
+            assertNull(searchResult.docs().getFirst().captionEmbedding());
+            assertNull(searchResult.docs().getFirst().captionEmbeddingModel());
+            assertNull(searchResult.docs().getFirst().licenseName());
+            assertNull(searchResult.docs().getFirst().licenseUrl());
+            assertFalse(searchResult.meta().getFirst().hasMore());
+            assertNull(searchResult.meta().getFirst().facet());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+        }
+    }
+
+    @Test
+    public void combined_search_executes_single_aggregate_command() {
+        System.setProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY, "true");
+        LMStudioEmbedding.setEmbeddingProviderForTests(text -> new LMStudioEmbedding.EmbeddingResult(List.of(0.0, 1.0, 0.15, 0.0), "test-query-model"));
+        try {
+            ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
+            ImageSearchResult searchResult = imageDataAccess.search(request(
+                    "newspaper",
+                    SearchType.Combined,
+                    0,
+                    true,
+                    List.of("bird"),
+                    null,
+                    null,
+                    null,
+                    List.of("chair", "dining table"),
+                    null,
+                    List.of("cup"),
+                    null,
+                    null,
+                    null,
+                    false
+            ));
+
+            assertNotNull(searchResult.stats());
+            assertEquals(1, searchResult.stats().operations().stream()
+                    .filter(operation -> "aggregate".equals(operation.commandName()))
+                    .count());
+        } finally {
+            LMStudioEmbedding.setEmbeddingProviderForTests(null);
+            System.clearProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY);
+        }
+    }
+
+    @Test
     public void run_with_traces_returns_identifiable_commands_for_the_run() {
         System.setProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY, "true");
         try {
             ImageDataAccess imageDataAccess = ImageDataAccess.getInstance();
             List<MongoConnectionTracing.CommandTrace> traces = MongoConnectionTracing.runWithTraces(
-                    () -> imageDataAccess.search("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null)
+                    () -> imageDataAccess.search(request("statue", 0, null, List.of("bear"), null, null, null, null, null, null, null, null, null))
             );
 
             assertFalse(traces.isEmpty());
@@ -221,5 +474,49 @@ public class ImageDataAccessTest extends AtlasDataTest {
         } finally {
             System.clearProperty(MongoConnectionTracing.TRACE_COMMANDS_PROPERTY);
         }
+    }
+
+    private static SearchRequest request(
+            String text,
+            int page,
+            Boolean hasPerson,
+            List<String> animal,
+            List<String> appliance,
+            List<String> electronic,
+            List<String> food,
+            List<String> furniture,
+            List<String> indoor,
+            List<String> kitchen,
+            List<String> outdoor,
+            List<String> sports,
+            List<String> vehicle
+    ) {
+        return request(text, SearchType.Text, page, hasPerson, animal, appliance, electronic, food, furniture, indoor, kitchen, outdoor, sports, vehicle, false);
+    }
+
+    private static SearchRequest request(
+            String text,
+            SearchType searchType,
+            int page,
+            Boolean hasPerson,
+            List<String> animal,
+            List<String> appliance,
+            List<String> electronic,
+            List<String> food,
+            List<String> furniture,
+            List<String> indoor,
+            List<String> kitchen,
+            List<String> outdoor,
+            List<String> sports,
+            List<String> vehicle,
+            boolean includeLicense
+    ) {
+        return SearchRequest.of(
+                text,
+                searchType,
+                page,
+                new SearchFilters(hasPerson, animal, appliance, electronic, food, furniture, indoor, kitchen, outdoor, sports, vehicle),
+                includeLicense
+        );
     }
 }
